<resources>
    <string name="app_name">Project_CMovel</string>
    <string name="title">Travel</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="emptyfields">Empty Fields</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="pw_dont_match">Password dont match</string>
    <string name="valid_mail">Enter a valid Email</string>
    <string name="auth_success">Authentication Successful</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="regis_succ">Registration Successful</string>


    <string name="country_prompt">Choose a country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps_turn_on">Gps Turn on</string>
    <string name="gps_turn_off">GPS Turn off</string>
    <string name="no_internet">Network not available</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="you_are_here">You are Here</string>
    <string name="no_signal">No Signal</string>
    <string name="gps_off">GPS is NOT turn ON</string>
    <string name="favorite_save">Favorite Saved!!!</string>
    <string name="favorite_deleted">Favorite deleted</string>
    <string name="updated_sucess">Updated with Success</string>
    <string name="deleted_success">Deleted with Success</string>
    <string name="favorites_places">Favorites Places</string>
    <string name="your_description">Your Description</string>
    <string name="update">Update</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="to">To:</string>
    <string name="title2">Title:</string>
    <string name="body">Body:</string>
    <string name="body2">Body</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="properties">Properties</string>
    <string name="choose_map">Choose Map</string>
    <string name="save">Save</string>
    <string name="search_radius_distance">Search Radius Distance</string>
    <string name="distance_in_meters">Distance in meters</string>
    <string name="messages_received">Messages Received</string>
    <string name="messages_sent">Messages Sent</string>
    <string name="travel_application">Travel Application</string>
    <string name="save_and_visit_your">Save and visit your</string>
    <string name="favorites_locations">favorites locations!!!</string>
    <string name="go_to_map">Go to Map</string>
    <string name="favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="log_off">Log off</string>
    <string name="favorite_already">You already have that favorite</string>
    <string name="short_tobe_sent">Text to Short to be sent</string>
    <string name="welcome">Welcome</string>
    <string name="order_by">Order By:</string>

    <string-array name="array_order">
        <item>1- Name</item>
        <item>2- Address</item>
        <item>3- Description</item>
    </string-array>


</resources>
