<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/gotomap32"
            android:title="@string/go_to_map" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_black_36dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/messages32"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/properties" />
    </group>
<!--
    <item
        android:id="@+id/navigation_drawer_item3"
        android:title="Change Map"
        android:icon="@drawable/gotomap32"
        app:actionLayout="@layout/spinner"></item>-->

</menu>
