<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estg.joaoviana.project_cmovel.authentication.RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:text="@string/title"/>
    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/registration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleRegister"
        android:orientation="vertical"
        android:id="@+id/linearLayout1"
        android:layout_marginTop="25dp">


    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:padding="5dp"
        android:hint="@string/username"
        android:background="@drawable/my_border"
        />
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:background="@drawable/my_border"
        />
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:background="@drawable/my_border"
            />
        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_password"
            android:background="@drawable/my_border"
            />
        <TextView
            android:id="@+id/failedRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registration_failed"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25dp"
            android:backgroundTint="@color/darkGrey"
            android:padding="10dp"
            android:onClick="registration"

            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="25dp"
            android:backgroundTint="@color/darkGrey"
            android:padding="10dp"
            android:onClick="cancel"

            />

    </LinearLayout>




</RelativeLayout>
