<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estg.joaoviana.project_cmovel.favorites.FavoritesFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titleFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:text="@string/favorites_places" />

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleFavorites"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textIdUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editTextUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_weight="2"
                android:hint="@string/your_description" />
            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/update"
                />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:text="@string/cancel"
                />
        </LinearLayout>
    <TextView
        android:id="@+id/ordertext"
        android:layout_width="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/order_by"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/ordertext"
        android:entries="@array/array_order"
      >
    </Spinner>

    <ImageView
        android:id="@+id/img_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_alignParentRight="true"
        android:src="@drawable/icon_arrow_up"
        android:layout_marginTop="4dp"/>


    <ListView
        android:id="@+id/listFavorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ordertext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />



</RelativeLayout>
