<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar2"
    android:id="@+id/parentRelative"
    android:gravity="top"
    android:paddingTop="16dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_margin="10dp">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/suitcase48" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/travel_application"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
    <TextView
        android:id="@+id/secondaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="2dp"
        android:text="@string/save_and_visit_your"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:id="@+id/secondaryTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondaryTitle"
        android:layout_marginTop="2dp"
        android:text="@string/favorites_locations"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:text="joaoviana@ipvc.pt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


</RelativeLayout>
